Создание основых компонент - Создание сущности Client - Создание класса  User - Создание класса Community

--- a/Psychotype_HSE/Psychotype_HSE.csproj
+++ b/Psychotype_HSE/Psychotype_HSE.csproj
@@ -160,6 +160,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AppSettings.cs" />
+    <Compile Include="Models\Components\Client.cs" />
+    <Compile Include="Models\Components\Community.cs" />
+    <Compile Include="Models\Components\User.cs" />
     <Compile Include="Models\VkApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
