--- a/Psychotype_HSE/packages.config
+++ b/Psychotype_HSE/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
-  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
@@ -25,8 +25,12 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="NetFx.Extensions.DependencyInjection" version="2.1.1" targetFramework="net452" />
+  <package id="NetFx.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net452" />
+  <package id="NetFx.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
-  <package id="VkNet" version="1.25.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="VkNet" version="1.39.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
