GetID works only for User. Added tests. Changed token.

--- a/Psychotype_HSE_Tests/Psychotype_HSE_Tests.csproj
+++ b/Psychotype_HSE_Tests/Psychotype_HSE_Tests.csproj
@@ -77,6 +77,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Models\ApiTests.cs" />
+    <Compile Include="Models\Components\ClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
