--- a/Psychotype_HSE_Tests/packages.config
+++ b/Psychotype_HSE_Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net452" />
   <package id="NetFx.Extensions.DependencyInjection" version="2.1.1" targetFramework="net452" />
   <package id="NetFx.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net452" />
