--- a/Psychotype_HSE_Tests/Psychotype_HSE_Tests.csproj
+++ b/Psychotype_HSE_Tests/Psychotype_HSE_Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Models\PsychotypeContextTests.cs" />
     <Compile Include="Models\StemmerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\PythonRunnerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Psychotype_HSE\Psychotype_HSE.csproj">
@@ -100,6 +101,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\script.py" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
