SaveTextsToCSV method is added

--- a/Psychotype_HSE_Tests/Psychotype_HSE_Tests.csproj
+++ b/Psychotype_HSE_Tests/Psychotype_HSE_Tests.csproj
@@ -105,6 +105,9 @@
   <ItemGroup>
     <Content Include="Scripts\script.py" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TestFiles\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
